# selecto

./: .gitignore  Makefile  README.md  tox.ini
.github/workflows/: ci.yml
analysis/: Data Analysis for Products.ipynb  README.md
myenv/: pyvenv.cfg
web/: DEPLOY.md  README.md
web/selecto/: api_guide.md  config.py  conftest.py  dataaccesslayer.py  dataaccesslayer_practice.py  manage.py  mockups.py  pyproject.toml  pytest.ini  requirements.txt
web/selecto/homepage/: urls.py  views.py
web/selecto/products/: account.css  admin.py  forms.py  models.py  openai_module.py  permissions.py  serializers.py  urls.py  utils.py  views.py
web/selecto/products/fixtures/: initial_data.json  sample_data.json
web/selecto/products/management/commands/: init_db.py
web/selecto/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_productphoto_options_and_more.py
web/selecto/products/templates/products/: about_us.html  contact_us.html  details.html  header.html  home.html  index.html  login.html  review_details.html  review_list.html  signup.html
web/selecto/products/templatetags/: pagination_tags.py
web/selecto/resources/: template.env
web/selecto/selecto/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
web/selecto/static/css/: restframework-override.css
web/selecto/templates/admin/: base_site.html
web/selecto/templates/rest_framework/: api.html
web/selecto/tests/: test_api.py  test_dataaccesslayer.py  test_example.py  test_permissions.py  test_templatetags.py  test_test_database.py  test_utils.py  test_views.py
(+1 files in other folders)
