
[tool.poetry]
name = "selecto"
version = "1.0"
description = "selecto website"
authors = ["Jeffery Do <sebastien@eustace.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.9"
pytest = "7.2.2"
pytest-django = "4.5.2"
openai = "0.27.4"
django-allauth = "0.54.0"
python-decouple = "3.8"